--- a/cicd_project/docker-compose.yml
+++ b/cicd_project/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         command: python manage.py runserver 0.0.0.0:8000
         ports:
             - "8000:8000"
-        command: gunicorn --bind :8000 --workers 3 --threads 2 --capture-output --access-logfile /logs/gunicorn-access.log --timeout 300 anyfit.wsgi:application
+        # command: gunicorn --bind :8000 --workers 3 --threads 2 --capture-output --access-logfile /logs/gunicorn-access.log --timeout 300 anyfit.wsgi:application
         container_name: 'cicd_dev'
         volumes:
             - .:/code
