--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: python
 
 install:
   - pip install -r requirements.txt
-  - pip install Twisted
 
 script:
-  - trial daum_openapi
+  - python -m unittest
