--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
 version : "3"
 services:
     server:
-        image: docker/cicde:dev
+        image: docker/cicdv3:dev
         build:
             context: .
             dockerfile: ./Dockerfile
-        command: python manage.py runserver 0.0.0.0:8000
+        # command: python manage.py runserver 0.0.0.0:8000
         ports:
             - "8000:8000"
-        # command: gunicorn --bind :8000 --workers 3 --threads 2 --capture-output --access-logfile /logs/gunicorn-access.log --timeout 300 anyfit.wsgi:application
+        command: gunicorn --bind :8000 --workers 3 --threads 2 --capture-output --access-logfile /logs/gunicorn-access.log --timeout 300 cicd_project.wsgi:application
         container_name: 'cicd_dev'
-        volumes:
-            - .:/code
