--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 asgiref==3.4.1
 certifi==2021.5.30
 Django==3.2.6
+django-ninja==0.13.2
+gunicorn==20.1.0
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
+pydantic==1.8.2
 pytz==2021.1
+PyYAML==5.4.1
 sqlparse==0.4.1
+typing-extensions==3.10.0.0
