마이그레이션 테스트

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,4 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
-# repos:
-# -   repo: https://github.com/pre-commit/pre-commit-hooks
-#     rev: v3.2.0
-#     hooks:
-#     -   id: trailing-whitespace
-#     -   id: end-of-file-fixer
-#     -   id: check-yaml
-#     -   id: check-added-large-files
 repos:
-  # - repo: local
-  #   hooks:
-  #     - id: pre-commit-django-migrations
-  #       name: Check django migrations
-  #       entry: ./manage.py makemigrations --check
-  #       language: system
-  #       types: [python]
-  #       pass_filenames: false
-
-
   - repo: local
     hooks:
       - id: pre-push-django-makemigrations
@@ -29,3 +9,14 @@ repos:
         types: [python]
         pass_filenames: false
         always_run: true
+
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: pylint
+        language: python
+        types: [python]
+        args: ["--score=n"]
+        require_serial: false
+        additional_dependencies: []
